Price check and post booking implemented

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,16 @@
     </fragment>
 
     <fragment
+        android:id="@+id/priceFragment"
+        android:name="com.amadeus.android.demo.fragments.price.PriceFragment"
+        android:label="PriceFragment"
+        tools:layout="@layout/fragment_price">
+        <argument
+            android:name="offerId"
+            app:argType="string" />
+    </fragment>
+
+    <fragment
         android:id="@+id/locationFragment"
         android:name="com.amadeus.android.demo.fragments.location.LocationFragment"
         android:label="LocationFragment"
